ingress/myapp-ingress-multiply.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  tls:
  - hosts:
    - myapp.com
    secretName: myapp-secret-tls
  rules:
    # valid domain address
    # map domain name to Node's IP address, which is the entry point
  - host: myapp.com
    http:
      paths: /analytics
      - backend:
          serviceName: myapp-analytics-service
          servicePort: 3000
      paths: /shoppings
      - backend:
          serviceName: myapp-shopping-service
          servicePort: 8080
# another way
  - host: analytics.myapp.com
    http:
      paths: /analytics
      - backend:
          serviceName: myapp-analytics-service
          servicePort: 3000
  - host: shoppings.myapp.com
    http:
      paths: /shoppings
      - backend:
          serviceName: myapp-shopping-service
          servicePort: 8080
